--- a/index.html
+++ b/index.html
@@ -6,18 +6,12 @@
         
     </head>
     <body>
-        <h1 class = "container bg-dark py-3 my-3" style = "text-align: center; color: white;">UBCanvas</h1>
+        <h1 class = "container bg-primary rounded py-3 my-3" style = "text-align: center; color: white;">UBCanvas</h1>
         <div style = "text-align: center;"id="canvasContainer">
             <canvas style = "position: absolute;
-            border: 5px solid black;
-            right: 220px;"
+            border: 2px solid black; top:100px;right: 200px; 
+            border-radius: 20px;"
             id="myCanvas" width="1000" height="500"></canvas>
-        </div>
-        <div class = "colors">
-            <div id = "red"><button onclick="colorPicker('red')"></button></div>
-            <div id = "blue"></div>
-            <div id = "green"></div>
-            <div id = "black"></div>
         </div>
     </body>
 </html>
