--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
     <script src = "/app.js"></script>
     <script src = "/styles.css"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    <head>
-        
+        <meta name="viewport" content="width=device-width, user-scalable=no">
     </head>
     <body>
         <h1 class = "container bg-primary rounded py-3 my-3" style = "text-align: center; color: white;">UBCanvas</h1>
         <div style = "text-align: center;"id="canvasContainer">
             <canvas style = "position: absolute;
-            border: 2px solid black; top:100px;right: 200px; 
+            border: 3px solid black; top:110px;right: 630px; 
             border-radius: 20px;"
-            id="myCanvas" width="1000" height="500"></canvas>
+            id="myCanvas" width="700" height="500"></canvas>
+        </div>
+        <div id = "sideCanvas" >
+            <canvas id = "secondaryCanvas" style = "height: 250px; width: 410px;border: 3px solid black; top:110px;right: 630px; 
+            border-radius: 20px; position: absolute; right: 200px;"></canvas>
+            <canvas id = "thirdCanvas" style = "height: 240px; width: 410px;border: 3px solid black; top:375px;right: 630px; 
+            border-radius: 20px; position: absolute; right: 200px;"></canvas>
         </div>
     </body>
 </html>
