--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< HEAD:index.html
-    <script src = "/app.js"></script>
-    <script src = "/styles.css"></script>
+    
+    <link rel="stylesheet" type="text/css" href="/styles.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    <head>
         <meta name="viewport" content="width=device-width, user-scalable=no">
-=======
-    <head>
-        <script src = "/app.js"></script>
-        <script src = "/styles.css"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    <head>
-            
->>>>>>> c4805149b043bf2e990b364651ac39066893d14c:public/index.html
     </head>
     <body>
         <h1 class = "container bg-primary rounded py-3 my-3" style = "text-align: center; color: white;">UBCanvas</h1>
@@ -28,4 +20,5 @@
             border-radius: 20px; position: absolute; right: 200px;"></canvas>
         </div>
     </body>
+    <script src = "/app.js"></script>
 </html>
