--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <body>
         <h1 class = "container bg-primary rounded py-3 my-3" style = "text-align: center; color: white;">✏️ UBCanvas</h1>
         <div style = "text-align: center;"id="canvasContainer">
-            <canvas style = "position: absolute;
+            <canvas style = "
+
             border: 3px solid black;  
             border-radius: 20px;"
             id="myCanvas" width="300" height="300"></canvas>
