--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <script src="/socket.io/socket.io.js"></script>
     <script>
-    const socket = io();
+    //const socket = io();
     </script>
     <script>
         //const { Socket } = require("engine.io");
